# restful-chat-rust

./: Cargo.toml  api.yml
src/: auth.rs  jwt.rs  main.rs  types.rs
src/auth/: mod.rs
src/chat/: mod.rs
src/db/: auth.rs  mod.rs
